--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    background-color: aqua;
+    background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);
 }
 
 h1 {
